[package]
name = "unwrap_goto"
version = "0.1.0"
edition = "2018"
authors = ["mu <mu.2019@hotmail.com>"]
description = "unwrap Option an Result or goto `return`/`cotinue`/`break` as you want."
homepage = "https://github.com/mu2019/unwrap_goto"
repository = "https://github.com/mu2019/unwrap_goto"
license = "MIT OR Apache-2.0"
keywords = ["error", "unwrap"]
categories = ["error", "unwrap"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

